[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphalens-forecast"
version = "0.0.0"
description = "AlphaLens forecasting tools."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphalens_forecast*"]
